<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_Axis" Id="{c10f7c7f-ed0d-4007-b87f-c6c078aa34a4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_Axis :
(
	Disabled,
	Enabled,
	Idle,
	MoveAbs,
	Stop,
	Error,
	Reset,
	ManualMode
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>