<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_Speed" Id="{83066982-a1eb-4a89-bb15-ea4c9298afbf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_Speed :
(
	Low,
	High
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>