<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_ErrorData" Id="{f88de905-5889-46a6-aac2-37511f0c15b1}">
    <Declaration><![CDATA[TYPE ST_ErrorData :
STRUCT
	nErrorID			: UDINT;
	sTimeStamp			: STRING;
	sErrorMessageBody	: STRING[300];
	sErrorMessageHeader	: STRING[300];	
	eLastState			: E_Axis;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>